<resources>
    <string name="appName">Waterland</string>
    <string name="titleApp">Aly in</string>
    <string name="logInText">Log in</string>
    <string name="passwordText">Password</string>
    <string name="hintLoginText">Username or Email</string>
    <string name="hintLoginPass">Password</string>
    <string name="forgotPasswordText">Forgot Password?</string>
    <string name="signupQuestionText">Don\'t have an account?</string>
    <string name="underlineSignup"><u>Sign up</u></string>
    <string name="signupText">Sign up</string>
    <string name="emailSignup">Email</string>
    <string name="addressSignup">Address</string>
    <string name="passwordSignup">Password</string>
    <string name="usernameSignup">Username</string>
    <string name="fullNameSignup">Full Name</string>
    <string name="accQuestionText">Have an account?</string>
    <string name="underlineLogin"><u>Log in</u></string>
    <string name="logoutText">Log Out</string>
    <string name="emailHomeText">Email:</string>
    <string name="underlineText"><u>X</u></string>
    <string name="fullNameHome">Full Name:</string>
    <string name="usernameHome">Username:</string>
    <string name="passwordHome">Password:</string>
    <string name="addressHome">Address:</string>
    <string name="roleHome">Role:</string>
    <string name="homePageTitle">HOME PAGE</string>
    <string name="forgotPasswordTitle">FORGOT PASSWORD</string>
    <string name="sendCode">SEND CODE</string>
    <string name="backText">BACK</string>
    <string name="sampleText">Text here</string>
    <string name="email_or_phone_number">EMAIL OR PHONE NUMBER</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_1">ENTER OTP</string>
    <string name="submit">SUBMIT</string>
    <string name="reset_your_password">RESET YOUR PASSWORD</string>
    <string name="enter_new_password">ENTER NEW PASSWORD</string>
    <string name="re_enter_your_new_password">RE-ENTER YOUR NEW PASSWORD</string>
    <string name="password_changed">PASSWORD CHANGED!</string>
    <string name="password_changed_1">Your password has been change successfully.</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="resend_otp_in">"Resend OTP in "</string>
    <string name="seconds">" seconds"</string>
    <string name="cellphone_number">Cellphone Number</string>
    <string name="otp_text">OTP verification\n</string>
    <string name="message_OTP">We will send you an One Time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_63">+63-</string>
    <string name="_1234567890">1234567890</string>
    <string name="title_activity_admin_home_page">AdminHomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="navHome">Dashboard</string>
    <string name="navSettings">Settings</string>
    <string name="navAboutUs">About Us</string>
    <string name="navTestFour">navTestFour</string>
    <string name="navTestFive">navTestFive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="nav_order">Order</string>
    <string name="nav_history">Order Tracking</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_help">Help</string>
    <string name="logo">Logo</string>
    <string name="address">Address</string>

    <string name="client_id">636704588651-tg0qt3valnsghtksvgh59fnc2mjc9e4t.apps.googleusercontent.com</string>

    <!--    <string name="facebook_app_id">1255795338940588</string>-->
    <!--    <string name="facebook_client_token">09bd628df4120847f7b371941fb7e214</string>-->

    <string name="facebook_app_id">498518973096997</string>
    <string name="facebook_client_token">cd4eb7e8c13ef3fe7acf902b3867f3a9</string>

    <string name="fb_login_protocol_scheme">fb1234</string>

    <string name="app_name">Waterland</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="cash">Cash on Delivery</string>
    <string name="gcash">GCash e-Wallet</string>
    <string name="item_name">Item Name</string>
    <string name="item_order_quantity">Item order quantity</string>
    <string name="item_price">Item Price</string>
    <string name="todo">TODO</string>
    <string name="_0">₱0</string>
    <string name="bold_page_order">Check the status of your order on the <b>order tracking</b> page</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="thank_you_for_your_order">Thank you for your order.</string>
    <string name="order_confirmed">ORDER CONFIRMED</string>
    <string name="delivery_address">Select Delivery Adddress</string>
    <string name="mobile_number">Mobile number</string>
    <string name="address_input">Address</string>
    <string name="phone_logo">Logo</string>
    <string name="fix_address">Region, Province, City, Baranggay</string>
    <string name="dropdown_icon">Dropdown Icon</string>
    <string name="G_cash_logo">Gcash logo</string>
    <string name="select_your_delivery_date">Select your delivery date:</string>
    <string name="delivery_day">Delivery date</string>
    <string name="your_message_to_the_seller">Your message to the seller</string>
    <string name="leave_a_message">Leave a Message</string>
    <string name="enter_any_special_requests">Enter any special requests.</string>
    <string name="postal_code">Postal Code</string>
    <string name="image">Image</string>
    <string name="account">ACCOUNT</string>
    <string name="orders">ORDERS</string>
    <string name="products">PRODUCTS</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="log_out">Log out</string>

    <string name="loren">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Platea cubilia platea feugiat dapibus;
            montes praesent inceptos. Ipsum nibh cubilia laoreet montes ad a maecenas luctus. Auctor massa a cras nisl;
            porttitor lacinia porta non.</string>
    <string name="Aly">Aly in Waterland</string>

    <string name="onesignal">959da477-983c-4850-bc7a-16cea82d218e</string>
    <string name="sEmail">alywaterland@gmail.com</string>
    <string name="sPass">qybg tijb vntd xudn</string>
    <string name="about_us_description"> Aly in Waterland Waterstation is an independent water refilling business founded on 2018 by Alilie Francisco. The business is thriving on its tagline: “SAFE WATER, SAFE LIFE.” Its mission is to provide clean and affordable water to Brgy Barangka, Marikina and to its nearby barangays.</string>
    <string-array name="cancel_reasons">
        <item>Item not needed</item>
        <item>Ordered by mistake</item>
        <item>Better price available</item>
        <item>Others</item>
    </string-array>

</resources>