<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:icon="@drawable/home_icon_fill"
            android:id="@+id/home_nav"
            android:title="@string/navHome"/>
        <item
            android:icon="@drawable/baseline_settings_24"
            android:id="@+id/settings_nav"
            android:title="@string/navSettings"/>
        <item
            android:icon="@drawable/baseline_report_24"
            android:id="@+id/about_nav"
            android:title="@string/about_us"/>
        <item
            android:icon="@drawable/baseline_help_24"
            android:id="@+id/help_nav"
            android:title="Help"/>

        <!-- Divider -->
        <item
            android:title=""
            android:enabled="false"/>

        <item
            android:icon="@drawable/baseline_logout_24"
            android:id="@+id/logout"
            android:title="@string/logoutText"/>


</menu>
