<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    tools:context=".HomePage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homePageTitle"
        android:gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <!--    Email    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/emailHomeText"
            android:textSize="8pt"
            tools:ignore="TextSizeCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/home_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/underlineText"
            android:textColor="@color/bg2"
            android:textSize="8pt"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <!--    FullName    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/fullNameHome"
            android:textSize="8pt"
            tools:ignore="TextSizeCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/home_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/underlineText"
            android:textColor="@color/bg2"
            android:textSize="8pt"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <!--    Username    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/usernameHome"
            android:textSize="8pt"
            tools:ignore="TextSizeCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/home_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/underlineText"
            android:textColor="@color/bg2"
            android:textSize="8pt"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <!--    Password    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/passwordHome"
            android:textSize="8pt"
            tools:ignore="TextSizeCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/home_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/underlineText"
            android:textColor="@color/bg2"
            android:textSize="8pt"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <!--    Address    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/addressHome"
            android:textSize="8pt"
            tools:ignore="TextSizeCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/underlineText"
            android:textColor="@color/bg2"
            android:textSize="8pt"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <!--    Role    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/roleHome"
            android:textSize="8pt"
            tools:ignore="TextSizeCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/home_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/underlineText"
            android:textColor="@color/bg2"
            android:textSize="8pt"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>


    <Button
        android:id="@+id/logout_btn"
        android:text="@string/logoutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        />

</LinearLayout>