<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    tools:context=".Signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="-110dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:importantForAccessibility="no"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/title"
            android:shadowColor="#77000000"
            android:shadowDx="0.2"
            android:shadowDy="0.2"
            android:shadowRadius="0.1"
            android:text="@string/titleApp"
            android:textColor="@color/white"
            android:textSize="43sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.313" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/title"
            android:shadowColor="#77000000"
            android:shadowDx="0.2"
            android:shadowDy="0.2"
            android:shadowRadius="0.1"
            android:text="@string/appName"
            android:textColor="@color/white"
            android:textSize="43sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.502" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--  email  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:counterEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_bg_oblong"
            android:hint="@string/emailSignup"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--  full name  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:counterEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_fullName"
            android:hint="@string/fullNameSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_bg_oblong"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--  username  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:counterEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/text_input_bg_oblong"
            android:textColorHint="#757575"
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:hint="@string/usernameSignup"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--  password  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:counterEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/text_input_bg_oblong"
            android:textColorHint="#757575"
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/passwordSignup"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--  address  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:counterEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/text_input_bg_oblong"
            android:textColorHint="#757575"
            android:id="@+id/register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:hint="@string/addressSignup"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/registerbtn"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/button_bg"
        android:background="@drawable/button_bg_color"
        android:enabled="true"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@id/progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:indeterminateTint="@color/white"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/singup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:enabled="true"
                android:fontFamily="@font/ubuntu"
                android:text="@string/signupText"
                android:textColor="@color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:text="@string/accQuestionText"
                    android:textColor="@color/white"
                    android:textSize="8pt"
                    android:layout_marginBottom="20dp"

                    tools:ignore="TextSizeCheck,TextSizeCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/login_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/underlineLogin"
                    android:textColor="@drawable/text_state_click"
                    android:textSize="8pt"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>